--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "name": "shred-shed-fe",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
-    "jest": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "scss": "^0.2.4",
-    "vitest": "^0.34.6"
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
