--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
+    "react-spinners": "^0.13.8",
     "scss": "^0.2.4"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.69.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
